@@ -269,6 +269,7 @@ div.pm_search_no_result_info {
 .state-accepted, .label-state-accepted,
 .state-confirmed, .label-state-confirmed { color: green !important; }
 .state-delayed, .label-state-delayed,
+.state-marked_not_applicable, .label-state-marked_not_applicable,
 .state-postponed_next_meeting, .label-state-postponed_next_meeting {
     color: grey !important; }
 .state-refused, .label-state-refused { color: violet !important; }
